# instacart-market-basket

./: .gitignore  main.py  pyproject.toml  requirements.txt
models/: lgbm_reorder_model.pkl  metadata.txt
notebooks/: EDA.ipynb  model_building.ipynb
scripts/: build_features.py  optimize_data.py
src/: data_loader.py  features.py  generate_training_data.py  labeler.py  matrix_builder.py  recommender.py
